<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/music_item_2"
        android:icon="@drawable/music_favourite"
        android:title="Help"
        app:showAsAction="always" />

    <item
        android:id="@+id/music_item_1"
        android:icon="@drawable/help"
        android:title="Help"
        app:showAsAction="always" />


</menu>