...
    <string name="artist_name">Artist Name</string>
    <string name="app_name1">DeezerSongSearch</string>
    <string name="arist_search_hint">Enter artist name</string>
    <string name="main_page">Home</string>
    <string name="songSearch">Search new Song</string>
    <string name="search_bar">Search Recipe</string>
    <string name="search_button">Search</string>
    <string name="title">Title</string>
    <string name="recipe_id">Recipe ID</string>
    <string name="summary">Summary</string>
    <string name="recipe_URL">Spoonacular Source Url</string>
    <string name="dict_search_hint">Please enter word for Meaning</string>
    <string name="dict_search_button_text">Submit</string>
    <string name="dict_save_button_text">Save Definitions</string>
    <string name="dict_view_button_text">View Search Term</string>
    <string name="dict_dictionary">DICTIONARY</string>
    <string name="dict_title_text">Saved Search Term(s)</string>
    <string name="dhelp">Help</string>
    <string name="save_search_result">Save Search Result</string>
    <string name="past_searches">Past Searches</string>
    <string name="history_recycler_view_description">Past Search Results:</string>
    <string name="saved_recipe">Save</string>
    <string name="recipe_help">Help</string>
    <string name="savedimage">savedImage</string>
    <string name="delete_recipe">Delete</string>
    <string name="savedRecipe">Saved</string>
    <string name="save_recipe">Save</string>
    <string name="sun_help">Help</string>
...
