...
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicImageViewAlbumCover" />

    <Button
        android:id="@+id/musicButtonSave"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_below="@id/textViewAlbumName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/musicBackButton"
        android:layout_width="32dp"
        android:layout_height="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />
</androidx.constraintlayout.widget.ConstraintLayout>
